--- a/client/layouts/main.html
+++ b/client/layouts/main.html
@@ -1,10 +1,10 @@
 <template name="main">
-
 	<div class="board container">
-		{{> menu }}
-
+		{{> gameHeader}}
+		
+		{{> menu}}
 
 	 	{{> yield}}
 	</div>
-	
+
 </template>
