Added a countdown timer

--- a/client/layouts/main.html
+++ b/client/layouts/main.html
@@ -1,5 +1,5 @@
 <template name="main">
-		<div class="board container">
+		<div class="board container-fluid">
 			{{> gameHeader}}
 			
 			{{> menu}}
