--- a/client/retrospectIt/boardQuads/quad/quad.less
+++ b/client/retrospectIt/boardQuads/quad/quad.less
@@ -21,3 +21,10 @@
   width: 100%;
   height: 100%;
 }
+
+.badge {
+  text-align: right;
+  display: block;
+  width: 20px;
+  background-color: #429EC0;
+}
