--- a/client/menu/menu.less
+++ b/client/menu/menu.less
@@ -7,6 +7,8 @@
 
 	.retro-timer{
 		color: white;
-			transform: scale(.6);
+		transform: scale(.5);
+		margin: 0 !important;
+		width: 300px;
 	}
 }
