move things around

--- a/client/layouts/main.html
+++ b/client/layouts/main.html
@@ -2,7 +2,7 @@
 		<div class="board container-fluid">
 			{{> gameHeader}}
 			
-			{{> menu}}
+			{{> menu menuClass}}
 
 		 	{{> yield}}
 		</div>
