--- a/client/menu/menu.less
+++ b/client/menu/menu.less
@@ -5,10 +5,20 @@
 		padding-left: 0;
 	}
 
+	.action-buttons {
+		transform: translateY(30px);
+	}
+
 	.retro-timer{
 		color: white;
-		transform: scale(.5);
+		transform: scale(0.5) translateY(36px) translateX(-475px);
 		margin: 0 !important;
 		width: 300px;
+	}
+}
+
+.new-game-menu {
+	.action-buttons {
+		transform: none;
 	}
 }
